assets/stylesheets/main.css
/* 
  CSS Reset
  http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
  License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}


/* 
  General
*/
*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -box-sizing: border-box;
  /* Useful for debugging: border: 1px solid red !important; */ 
}

.container {
  margin: 0 auto;
  width: 960px;
  background: #fff;
}

.row {
  min-width: 960px;
  background: #120020;
  color: #fff;
  text-align: center;
}

.body {
  min-height: 400px;

  /* HACK to center placeholder text */
  display: table; 
}

p {
  font: 200 40px/40px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #120020;
  letter-spacing: -3px;
  text-transform: lowercase;

  /* HACKS to center placeholder text */
  vertical-align: middle;
  display: table-cell; 
}



/* 
  Header
*/
.primary-header {
  padding-top: 22px;
}

.logo {
  font: 200 44px/44px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  float: none;
  display: inline-block;
  letter-spacing: -5px;
  font-style: italic;
  text-transform: lowercase;
}
.logo a:link, .logo a:visited, .logo a:hover, .logo a:active {
  text-decoration: none;
}
.logo a:link {
  color: #120020;
}
.logo a:visited {
  color: #120020;
}
.logo a:hover {
  color: #ed2424;
}
.logo a:active {
  color: #120020;
}

.nav {
  margin-top: 20px;
  float: right;
  text-align: right;

}
.nav li {
  font: 300 16px/16px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: inline-block;
  letter-spacing: -2px;
  padding: 0 5px 2px 5px;
  border-bottom: 1px solid #120020;
  border-top: 1px solid #120020;
}
.active-nav-item a {
  font-weight: 500;
  color: #000;
}
.nav a {
  text-decoration: none;
  text-transform: lowercase;
}
.nav a:link {
  color: #120020;
}
.nav a:visited {
  color: #120020;
}
.nav a:hover {
  color: #ed2424;
}
.nav a:active {
  color: #120020;
}


/* 
  Footer
*/
footer {
  font: 300 16px/16px "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  letter-spacing: -2px;
  text-transform: lowercase;
}
footer .copywrite { 
  font-weight: 400;
  font-size: 12px;
  line-height: 12px; 
  font-style: italic;
  letter-spacing: -1px;
  vertical-align: top;
}
footer .social-media {
  float: right;
  text-align: right;
  word-spacing: 2px;
}
footer .social-media small {
  font-weight: 100;
  letter-spacing: -1px;
}
footer a:link, footer a:visited, footer a:hover, footer a:active {
  text-decoration: none;
}
footer a:link {
  color: #120020;
}
footer a:visited {
  color: #120020;
}
footer a:hover {
  color: #ed2424;
}
footer a:active {
  color: #120020;
}



/*
  Image Grid
  (For displaying a grid of pictures as a navigation menu)
*/
.image-grid img {
  width: 400px;
  height: 400px;
  padding: 0 2px;
}

